# rcc

./: .gitignore  CMakeLists.txt  CParser.g4  Makefile  Paper.txt  PaperCtx.txt  PaperRaw.txt  Thinking.md  build.sh  generate.sh  glb.asm  int_control.asm  int_control.ir  print.asm  ptr.asm  te.asm  te_grep.S
ANTLR/: TLexer.g4  TParser.g4
ANTLR/.antlr/: TLexer.interp  TLexer.java
src/: main.cpp
src/backend/: Backend.h  RISCV64Backend.cpp  RISCV64Backend.h  RISCV64BackendData.cpp  RISCV64BackendInstruction.cpp  RISCV64BackendInternal.h  RISCV64BackendMemory.cpp
src/front/: AST.h  ASTBuilder.cpp  ASTBuilder.h  ASTPrinter.cpp  ASTPrinter.h  ASTVisitor.cpp  ASTVisitor.h  FrontBase.cpp  FrontSymtab.cpp  FrontSymtab.h  FrontSymtabCollector.cpp  FrontSymtabCollector.h  struct.md
src/ir/: IRBuilder.cpp  IRBuilder.h  IRBuilderPrint.cpp  IRVisitor.cpp  IRVisitor.h  koopa.h  struct.md
test/: t1.rsc  t2.rsc
tests/: rv64_subset.sh  t1.c
tests/cases/fail/: non_variadic_extra_args.c  variadic_float_arg.c  variadic_function_definition.c  variadic_missing_fixed_arg.c
tests/cases/success/: call_arity.c  globals_and_string.c  int_control.c  multi_globals.c  pointer_array.c  pointer_null_store.c  pointer_sub.c  string_pointer.c  variadic_printf.c  variadic_printf_stack.c  xv6_apis.c
tests/xv6/: grep.c  head.c  rcc_call9.c  rcc_file.c  rcc_mem.c  rcc_ping.c  rcc_pipe.c  rcc_printf.c  rcc_proc.c  rcc_sys.c  rcc_syscall_all.c  rcc_user_all.c  xargs.c
